Add new presentation

--- a/presentations/adversarial-ai.html
+++ b/presentations/adversarial-ai.html
@@ -41,7 +41,7 @@
                     <section>
                         <h2>How do ML Systems Work?</h2>
                     </section>
-                    <section><img src="../public/ml-system.png"></section>
+                    <section><img src="../public/adversarial-ai/ml-system.png"></section>
                 </section>
                 <section id="intro-appsec">
                     <section>
